# lagrange

./: README.md  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
src/: App.svelte  App.vue  main.css  main.ts  setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  traffic.rs
src/components/: accordion.vue  chip.vue  controller.svelte  editor.svelte  header-editor.svelte  height-resize.svelte  preview.svelte  response-header.svelte  response-status.svelte  response-tab.svelte  response.svelte  schema-viewer.svelte  split-pane.svelte  sub-tab.svelte  tab.svelte  variable-editor.svelte  welcome.svelte
src/components/icons/: sidebar.left.vue
src/lib/: editor.ts  fetchSchema.ts  json.ts  language.ts
src/modules/editor/: URL.vue  editor.vue  request.vue  response.vue  store.ts
src/store/: controller.ts  deriveSave.ts  fetch.ts  page.ts  response-tab.ts  response.ts  schema.ts
src/styles/: global.css  tailwind.css
src/utils/: keybind.ts  keydown.ts
