[package]
name = "Lagrange"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "Lagrange"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["fs-all", "global-shortcut-all", "http-all", "path-all"] }
reqwest = { version = "0.11.8", features = ["json"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
